[project]
name = "agentsteward"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.23",
    "langchain-anthropic>=0.3.12",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.3.31",
    "nanoid>=2.0.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
